src/pages/sourcepage/themes/base-time-chart-theme.scss
:global {
    .recharts-legend-item-text {
        font-size: 1.2em;
        font-weight: bold;
    }
    .origin-selector {
        .mdl-grid.mdl-grid--no-spacing {
            height: 100%;
            align-items: flex-start;
            padding-top: 15px;
            div {
                label {
                    margin-bottom: 0;
                    span {
                        padding-left: .2rem;
                        padding-top: .2rem;
                    }
                }
            }
        }
    }
    .custom-spacing {
        padding-left: 53px !important;
    }
    .stats {
        .mdl-grid.mdl-grid--no-spacing {
            height: 100%;
            align-items: flex-end;
        }
    }
    .recharts-cartesian-axis-tick-line {
        stroke: transparent;
    }
    .line-chart {
        &.thin-stroke {
            .recharts-layer.recharts-line-chart {
                path {
                    stroke-width: 1.5;
                }
            }
        }
        .recharts-layer.recharts-line-chart {
            path {
                stroke-width: 1.5;
            }
        }
        .recharts-cartesian-axis-line {
            stroke: transparent;
        }
        rect {
            fill-opacity: 1.5;
        }
        .recharts-y-axis {
            .recharts-text.recharts-cartesian-axis-tick-value {
                // fill: transparent;
            }
        }
        .empty-graph {
            width: 45%;
            height: 300px;
            position: absolute;
            .empty-graph-content {
                display: flex;
                width: 94%;
                height: 80%;
                margin-top: 6%;
                margin-left: 7%;
                align-items: center;
                justify-content: center;
                border-left: 1px solid gray;
                border-bottom: 1px solid gray;
            }
        }
    }
    .bar-chart {
        .recharts-y-axis {
            .recharts-text.recharts-cartesian-axis-tick-value {
                // fill: transparent;
            }
        }
        .recharts-layer.recharts-bar-rectangle {
            path {
                fill-opacity: .4;
                fill: darken(#FF9900, 5);
            }
        }
        .recharts-legend-wrapper {
            .recharts-default-legend {
                margin-left: 130px !important;
            }
        }
    }
    .graph-header {
        font-family: Helvetica;
        font-size: 16.8px;
        font-weight: bold;
        line-height: 24px;
        margin: -6px 0 5px;
        text-align: center;
        width: 100%;
    }
    .graph-loader {
        margin: 50px auto 0;
    }
}

@media (max-width: 839px) {
    :global {
        .custom-spacing {
            padding-left: 0px !important;
        }
        .line-chart {
            .empty-graph {
                width: 84%;
                margin-left: 6%;
                .empty-graph-content {
                    height: 90%;
                    margin-top: 0;
                }
            }
        }
    }
}

@media (max-width: 479px) {
    :global {
        .custom-spacing {
            padding-left: 20px !important;
        }
        .origin-selector {
            .mdl-grid.mdl-grid--no-spacing {
                padding-top: 0;
                > div {
                    width: 33.3333333333333333%;
                }
            }
        }
        .stats {
            order: -1;
            .mdl-grid.mdl-grid--no-spacing {
                > div {
                    width: 33.3333333333333333%;
                }
            }
        }
    }
}

